--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,12 +71,7 @@ jobs:
       - name: Create artifact for Windows
         if: matrix.os == 'windows-latest'
         run: |
-          7z a lindera-${{ matrix.feature }}-${{ matrix.target }}.zip \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera.exe \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-ipadic-builder.exe \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-unidic-builder.exe \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-ko-dic-builder.exe \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-cc-cedict-builder.exe
+          powershell Compress-Archive -DestinationPath lindera-${{ matrix.feature }}-${{ matrix.target }}.zip -Path target/${{ matrix.feature }}/${{ matrix.target }}/release/*.exe
       - name: Create artifact for OSX
         if: matrix.os == 'macos-latest'
         run: |
