--- a/lindera-ko-dic/Cargo.toml
+++ b/lindera-ko-dic/Cargo.toml
@@ -26,9 +26,8 @@ lindera-decompress = { version = "0.12.0", path = "../lindera-decompress", optio
 [build-dependencies]
 encoding = "0.2"
 flate2 = "1.0"
-reqwest = "0.11"
 tar = "0.4"
-tokio = { version = "1.9", features = ["full"] }
+ureq = { version = "2.4.0", default-features = false, features = ["tls"] }
 
 lindera-core = { version = "0.12.0", path = "../lindera-core" }
 lindera-ko-dic-builder = { version = "0.12.0", path = "../lindera-ko-dic-builder"}
