--- a/lindera-unidic/Cargo.toml
+++ b/lindera-unidic/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-unidic = []
+unidic = ["encoding", "zip", "ureq"]
 compress = ["lindera-unidic-builder/compress", "lindera-decompress"]
 
 [dependencies]
@@ -24,9 +24,9 @@ lindera-core = { version = "0.12.0", path = "../lindera-core" }
 lindera-decompress = { version = "0.12.0", path = "../lindera-decompress", optional = true }
 
 [build-dependencies]
-encoding = "0.2"
-zip = "0.6"
-ureq = { version = "2.4.0", default-features = false, features = ["tls"] }
+encoding = { version = "0.2" , optional = true }
+zip = { version = "0.6" , optional = true }
+ureq = { version = "2.4.0", default-features = false, features = ["tls"] , optional = true }
 
 lindera-core = { version = "0.12.0", path = "../lindera-core" }
 lindera-unidic-builder = { version = "0.12.0", path = "../lindera-unidic-builder"}
