--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-cli"
-version = "0.12.6"
+version = "0.13.0"
 edition = "2021"
 description = "A morphological analysis tool."
 documentation = "https://docs.rs/lindera-cli"
@@ -12,19 +12,19 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-default = []
+default = []  # no dictionary
 full = ["ipadic", "unidic", "ko-dic", "cc-cedict"]
-ipadic = ["lindera/ipadic"]
-unidic = ["lindera/unidic"]
-ko-dic = ["lindera/ko-dic"]
-cc-cedict = ["lindera/cc-cedict"]
+ipadic = ["lindera/ipadic"]  # Japanese dictionary
+unidic = ["lindera/unidic"]  # Japanese dictionary
+ko-dic = ["lindera/ko-dic"]  # Korean dictionary
+cc-cedict = ["lindera/cc-cedict"]  # Chinese dictionary
 compress = ["lindera/compress"]
 
 [dependencies]
 anyhow = "1.0"
 clap = { version = "3.1", features = ["derive", "cargo"] }
 
-lindera = { version = "0.12.6", path = "../lindera" }
+lindera = { version = "0.13.0", path = "../lindera" }
 
 [[bin]]
 name = "lindera"
