--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-cc-cedict"
-version = "0.13.4"
+version = "0.13.5"
 edition = "2021"
 description = "A Japanese morphological dictionary for CC-CEDICT."
 documentation = "https://docs.rs/lindera-cc-cedict"
@@ -12,21 +12,20 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-cc-cedict = ["encoding", "ureq", "zip"]
+cc-cedict = ["encoding", "zip"]
 compress = ["lindera-cc-cedict-builder/compress", "lindera-decompress"]
 
 [dependencies]
-bincode = "1.3"
-byteorder = "1.4"
-once_cell = "1.3"
+bincode = "1.3.3"
+byteorder = "1.4.3"
+once_cell = "1.12.0"
 
-lindera-core = { version = "0.13.4", path = "../lindera-core" }
-lindera-decompress = { version = "0.13.4", path = "../lindera-decompress", optional = true }
+lindera-core = { version = "0.13.5", path = "../lindera-core" }
+lindera-decompress = { version = "0.13.5", path = "../lindera-decompress", optional = true }
 
 [build-dependencies]
-encoding = { version = "0.2", optional = true }
-ureq = { version = "2.4", default-features = false, features = ["tls"], optional = true }
-zip = { version = "0.6", optional = true }
+encoding = { version = "0.2.33", optional = true }
+zip = { version = "0.6.2", optional = true }
 
-lindera-core = { version = "0.13.4", path = "../lindera-core" }
-lindera-cc-cedict-builder = { version = "0.13.4", path = "../lindera-cc-cedict-builder"}
+lindera-core = { version = "0.13.5", path = "../lindera-core" }
+lindera-cc-cedict-builder = { version = "0.13.5", path = "../lindera-cc-cedict-builder"}
