--- a/lindera-ko-dic/Cargo.toml
+++ b/lindera-ko-dic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-ko-dic"
-version = "0.13.5"
+version = "0.13.6"
 edition = "2021"
 description = "A Japanese morphological dictionary for ko-dic."
 documentation = "https://docs.rs/lindera-ko-dic"
@@ -12,22 +12,21 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-ko-dic = ["encoding", "flate2", "tar", "ureq"]
+ko-dic = ["encoding", "flate2", "tar"]
 compress = ["lindera-ko-dic-builder/compress", "lindera-decompress"]
 
 [dependencies]
-bincode = "1.3"
-byteorder = "1.4"
-once_cell = "1.3"
+bincode = "1.3.3"
+byteorder = "1.4.3"
+once_cell = "1.12.0"
 
-lindera-core = { version = "0.13.4", path = "../lindera-core" }
-lindera-decompress = { version = "0.13.4", path = "../lindera-decompress", optional = true }
+lindera-core = { version = "0.13.5", path = "../lindera-core" }
+lindera-decompress = { version = "0.13.5", path = "../lindera-decompress", optional = true }
 
 [build-dependencies]
-encoding = { version = "0.2", optional = true }
-flate2 = { version = "1.0", optional = true }
-tar = { version = "0.4", optional = true }
-ureq = { version = "2.4", default-features = false, features = ["tls"], optional = true }
+encoding = { version = "0.2.33", optional = true }
+flate2 = { version = "1.0.24", optional = true }
+tar = { version = "0.4.38", optional = true }
 
-lindera-core = { version = "0.13.4", path = "../lindera-core" }
-lindera-ko-dic-builder = { version = "0.13.4", path = "../lindera-ko-dic-builder"}
+lindera-core = { version = "0.13.5", path = "../lindera-core" }
+lindera-ko-dic-builder = { version = "0.13.5", path = "../lindera-ko-dic-builder"}
