--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera"
-version = "0.13.5"
+version = "0.14.0"
 edition = "2021"
 description = "A morphological analysis library."
 documentation = "https://docs.rs/lindera"
@@ -12,7 +12,8 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-default = []  # no dictionary
+default = ["ipadic"]  # ipadic is the default feature
+cjk = ["ipadic", "ko-dic", "cc-cedict"]
 full = ["ipadic", "unidic", "ko-dic", "cc-cedict"]
 ipadic = ["lindera-ipadic/ipadic"]  # Japanese dictionary
 unidic = ["lindera-unidic/unidic"]  # Japanese dictionary
@@ -21,27 +22,27 @@ cc-cedict = ["lindera-cc-cedict/cc-cedict"]  # Chinese dictionary
 compress = ["lindera-ipadic/compress", "lindera-unidic/compress"]
 
 [dependencies]
-anyhow = "1.0"
-bincode = "1.3"
-byteorder = "1.4"
-encoding = "0.2"
-serde = {version="1.0", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "1.0"
+anyhow = "1.0.58"
+bincode = "1.3.3"
+byteorder = "1.4.3"
+encoding = "0.2.33"
+serde = {version="1.0.138", features = ["derive"] }
+serde_json = "1.0.82"
+thiserror = "1.0.31"
 
-lindera-core = { version = "0.13.4", path = "../lindera-core" }
-lindera-dictionary = { version = "0.13.4", path = "../lindera-dictionary" }
-lindera-ipadic = { version = "0.13.4", path = "../lindera-ipadic", optional = true }
-lindera-ipadic-builder = { version = "0.13.4", path = "../lindera-ipadic-builder" }
-lindera-unidic = { version = "0.13.4", path = "../lindera-unidic", optional = true }
-lindera-unidic-builder = { version = "0.13.4", path = "../lindera-unidic-builder" }
-lindera-ko-dic = { version = "0.13.5", path = "../lindera-ko-dic", optional = true }
-lindera-ko-dic-builder = { version = "0.13.4", path = "../lindera-ko-dic-builder" }
-lindera-cc-cedict = { version = "0.13.4", path = "../lindera-cc-cedict", optional = true }
-lindera-cc-cedict-builder = { version = "0.13.4", path = "../lindera-cc-cedict-builder" }
+lindera-core = { version = "0.13.5", path = "../lindera-core" }
+lindera-dictionary = { version = "0.13.5", path = "../lindera-dictionary" }
+lindera-ipadic = { version = "0.13.5", path = "../lindera-ipadic", optional = true }
+lindera-ipadic-builder = { version = "0.13.5", path = "../lindera-ipadic-builder" }
+lindera-unidic = { version = "0.13.5", path = "../lindera-unidic", optional = true }
+lindera-unidic-builder = { version = "0.13.5", path = "../lindera-unidic-builder" }
+lindera-ko-dic = { version = "0.13.6", path = "../lindera-ko-dic", optional = true }
+lindera-ko-dic-builder = { version = "0.13.5", path = "../lindera-ko-dic-builder" }
+lindera-cc-cedict = { version = "0.13.5", path = "../lindera-cc-cedict", optional = true }
+lindera-cc-cedict-builder = { version = "0.13.5", path = "../lindera-cc-cedict-builder" }
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = "0.3.5"
 
 [[bench]]
 name = "bench"
