--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -8,12 +8,10 @@ jobs:
   test:
     name: Test
     strategy:
-      # max-parallel: 1
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        # os: [ubuntu-latest, macOS-latest]
         toolchain: [stable, beta, nightly]
-        features: ["default", "ipadic", "ko-dic", "cc-cedict", "compress"]
+        features: ["ipadic", "ko-dic", "cc-cedict", "compress"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
