--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -29,11 +29,10 @@ jobs:
   test:
     name: Test
     strategy:
-      # max-parallel: 1
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         toolchain: [stable]
-        features: ["default", "ipadic", "ko-dic", "cc-cedict", "compress"]
+        features: ["ipadic", "ko-dic", "cc-cedict", "compress"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
