--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -42,7 +42,7 @@ lindera-cc-cedict = { version = "0.14.0", path = "../lindera-cc-cedict", optiona
 lindera-cc-cedict-builder = { version = "0.14.0", path = "../lindera-cc-cedict-builder" }
 
 [dev-dependencies]
-criterion = "0.4.0"
+criterion = { version = "0.4.0", features = ["html_reports"] }
 
 [[bench]]
 name = "bench"
