--- a/lindera-core/Cargo.toml
+++ b/lindera-core/Cargo.toml
@@ -15,7 +15,7 @@ license = "MIT"
 anyhow = "1.0.58"
 bincode = "1.3.3"
 byteorder = "1.4.3"
-encoding = "0.2.33"
+encoding_rs = "0.8.31"
 log = "0.4.17"
 serde = {version="1.0.138", features = ["derive"] }
 thiserror = "1.0.31"
