--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -19,7 +19,9 @@ anyhow = "1.0.58"
 bincode = "1.3.3"
 byteorder = "1.4.3"
 clap = { version = "3.2.8", features = ["derive"] }
-encoding = "0.2.33"
+csv = "1.1.6"
+encoding_rs = "0.8.31"
+encoding_rs_io = "0.1.7"
 env_logger = "0.9.0"
 glob = "0.3.0"
 log = "0.4.17"
