--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,11 +58,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           zip --junk-paths lindera-${{ matrix.feature }}-${{ matrix.target }}.zip \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-ipadic-builder \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-unidic-builder \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-ko-dic-builder \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-cc-cedict-builder
+            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera
       - name: Create artifact for Windows
         if: matrix.os == 'windows-latest'
         run: |
@@ -71,11 +67,7 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           zip --junk-paths lindera-${{ matrix.feature }}-${{ matrix.target }}.zip \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-ipadic-builder \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-unidic-builder \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-ko-dic-builder \
-            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera-cc-cedict-builder
+            target/${{ matrix.feature }}/${{ matrix.target }}/release/lindera
       - name: Upload artifact
         uses: actions/upload-artifact@v2.3.1
         with:
