--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-default = []  # ipadic is the default feature
+default = []
 cjk = ["ipadic", "ko-dic", "cc-cedict"]
 full = ["ipadic", "unidic", "ko-dic", "cc-cedict"]
 ipadic = ["lindera-ipadic/ipadic"]  # Japanese dictionary
