--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -26,9 +26,11 @@ anyhow = "1.0.58"
 bincode = "1.3.3"
 byteorder = "1.4.3"
 encoding = "0.2.33"
+regex = "1.6.0"
 serde = {version="1.0.138", features = ["derive"] }
 serde_json = "1.0.82"
 thiserror = "1.0.31"
+unicode-normalization = "0.1.22"
 
 lindera-core = { version = "0.17.0", path = "../lindera-core" }
 lindera-dictionary = { version = "0.17.0", path = "../lindera-dictionary" }
