--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -30,6 +30,7 @@ regex = "1.6.0"
 serde = {version="1.0.138", features = ["derive"] }
 serde_json = "1.0.82"
 thiserror = "1.0.31"
+unicode-blocks = "0.1.4"
 unicode-normalization = "0.1.22"
 yada = "0.5.0"
 
