--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-cli"
-version = "0.17.0"
+version = "0.18.0"
 edition = "2021"
 description = "A morphological analysis command line interface."
 documentation = "https://docs.rs/lindera-cli"
@@ -13,7 +13,7 @@ license = "MIT"
 
 [features]
 default = []  # No directories included
-full = ["ipadic", "unidic", "ko-dic", "cc-cedict"]  # All dictionaries included
+all-dictionaries = ["ipadic", "unidic", "ko-dic", "cc-cedict"]  # All dictionaries included
 cjk = ["cc-cedict", "ipadic", "ko-dic"] # CJK dictionaries included
 ipadic = ["lindera/ipadic"]  # Japanese dictionary included
 unidic = ["lindera/unidic"]  # Japanese dictionary included
@@ -26,7 +26,7 @@ anyhow = "1.0.58"
 clap = { version = "4.0.7", features = ["derive", "cargo"] }
 serde_json = "1.0.82"
 
-lindera = { version = "0.17.0", path = "../lindera" }
+lindera = { version = "0.18.0", path = "../lindera" }
 
 [[bin]]
 name = "lindera"
