--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera"
-version = "0.17.0"
+version = "0.18.0"
 edition = "2021"
 description = "A morphological analysis library."
 documentation = "https://docs.rs/lindera"
@@ -12,13 +12,13 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-default = []
-cjk = ["ipadic", "ko-dic", "cc-cedict"]
-full = ["ipadic", "unidic", "ko-dic", "cc-cedict"]
-ipadic = ["lindera-ipadic/ipadic"]  # Japanese dictionary
-unidic = ["lindera-unidic/unidic"]  # Japanese dictionary
-ko-dic = ["lindera-ko-dic/ko-dic"]  # Korean dictionary
-cc-cedict = ["lindera-cc-cedict/cc-cedict"]  # Chinese dictionary
+default = []  # No directories included
+all-dictionaries = ["ipadic", "unidic", "ko-dic", "cc-cedict"]  # All dictionaries included
+cjk = ["cc-cedict", "ipadic", "ko-dic"] # CJK dictionaries included
+ipadic = ["lindera-ipadic/ipadic"]  # Japanese dictionary included
+unidic = ["lindera-unidic/unidic"]  # Japanese dictionary included
+ko-dic = ["lindera-ko-dic/ko-dic"]  # Korean dictionary included
+cc-cedict = ["lindera-cc-cedict/cc-cedict"]  # Chinese dictionary included
 compress = ["lindera-ipadic/compress", "lindera-unidic/compress"]
 
 [dependencies]
@@ -34,16 +34,16 @@ unicode-blocks = "0.1.4"
 unicode-normalization = "0.1.22"
 yada = "0.5.0"
 
-lindera-core = { version = "0.17.0", path = "../lindera-core" }
-lindera-dictionary = { version = "0.17.0", path = "../lindera-dictionary" }
-lindera-ipadic = { version = "0.17.0", path = "../lindera-ipadic" }
-lindera-ipadic-builder = { version = "0.17.0", path = "../lindera-ipadic-builder" }
-lindera-unidic = { version = "0.17.0", path = "../lindera-unidic", optional = true }
-lindera-unidic-builder = { version = "0.17.0", path = "../lindera-unidic-builder" }
-lindera-ko-dic = { version = "0.17.0", path = "../lindera-ko-dic", optional = true }
-lindera-ko-dic-builder = { version = "0.17.0", path = "../lindera-ko-dic-builder" }
-lindera-cc-cedict = { version = "0.17.0", path = "../lindera-cc-cedict", optional = true }
-lindera-cc-cedict-builder = { version = "0.17.0", path = "../lindera-cc-cedict-builder" }
+lindera-core = { version = "0.18.0", path = "../lindera-core" }
+lindera-dictionary = { version = "0.18.0", path = "../lindera-dictionary" }
+lindera-ipadic = { version = "0.18.0", path = "../lindera-ipadic" }
+lindera-ipadic-builder = { version = "0.18.0", path = "../lindera-ipadic-builder" }
+lindera-unidic = { version = "0.18.0", path = "../lindera-unidic", optional = true }
+lindera-unidic-builder = { version = "0.18.0", path = "../lindera-unidic-builder" }
+lindera-ko-dic = { version = "0.18.0", path = "../lindera-ko-dic", optional = true }
+lindera-ko-dic-builder = { version = "0.18.0", path = "../lindera-ko-dic-builder" }
+lindera-cc-cedict = { version = "0.18.0", path = "../lindera-cc-cedict", optional = true }
+lindera-cc-cedict-builder = { version = "0.18.0", path = "../lindera-cc-cedict-builder" }
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
