--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -26,6 +26,7 @@ anyhow = "1.0.58"
 bincode = "1.3.3"
 byteorder = "1.4.3"
 encoding = "0.2.33"
+once_cell = "1.16.0"
 regex = "1.6.0"
 serde = {version="1.0.138", features = ["derive"] }
 serde_json = "1.0.82"
