--- a/lindera-core/Cargo.toml
+++ b/lindera-core/Cargo.toml
@@ -17,6 +17,7 @@ bincode = "1.3.3"
 byteorder = "1.4.3"
 encoding_rs = "0.8.31"
 log = "0.4.17"
+once_cell = "1.16.0"
 serde = {version="1.0.151", features = ["derive"] }
 thiserror = "1.0.38"
 yada = "0.5.0"
