--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -11,9 +11,25 @@ keywords = ["morphological", "dictionary", "directory", "loader"]
 categories = ["text-processing"]
 license = "MIT"
 
+[features]
+default = []  # No directories included
+ipadic = ["lindera-ipadic"]  # Japanese dictionary included
+unidic = ["lindera-unidic"]  # Japanese dictionary included
+ko-dic = ["lindera-ko-dic"]  # Korean dictionary included
+cc-cedict = ["lindera-cc-cedict"]  # Chinese dictionary included
+ipadic-compress = ["lindera-ipadic/compress"]
+unidic-compress = ["lindera-unidic/compress"]
+ko-dic-compress = ["lindera-ko-dic/compress"]
+cc-cedict-compress = ["lindera-cc-cedict/compress"]
+
 [dependencies]
 anyhow = "1.0.68"
 bincode = "1.3.3"
 byteorder = "1.4.3"
+serde = { version="1.0.152", features = ["derive"] }
 
 lindera-core = { version = "0.21.0", path = "../lindera-core" }
+lindera-cc-cedict = { version = "0.21.0", path = "../lindera-cc-cedict", optional = true }
+lindera-ipadic = { version = "0.21.0", path = "../lindera-ipadic", optional = true }
+lindera-ko-dic = { version = "0.21.0", path = "../lindera-ko-dic", optional = true }
+lindera-unidic = { version = "0.21.0", path = "../lindera-unidic", optional = true }
