--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         toolchain: [stable, beta, nightly]
-        features: ["ipadic", "ko-dic", "cc-cedict", "compress"]
+        features: ["ipadic", "ko-dic", "cc-cedict"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
