--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-cli"
-version = "0.21.1"
+version = "0.22.0"
 edition = "2021"
 description = "A morphological analysis command line interface."
 documentation = "https://docs.rs/lindera-cli"
@@ -13,23 +13,21 @@ license = "MIT"
 
 [features]
 default = []  # No directories included
-all-dictionaries = ["ipadic", "unidic", "ko-dic", "cc-cedict"]  # All dictionaries included
-cjk = ["cc-cedict", "ipadic", "ko-dic"] # CJK dictionaries included
-ipadic = ["lindera/ipadic"]  # Japanese dictionary included
-unidic = ["lindera/unidic"]  # Japanese dictionary included
-ko-dic = ["lindera/ko-dic"]  # Korean dictionary included
-cc-cedict = ["lindera/cc-cedict"]  # Chinese dictionary included
-ipadic-compress = ["lindera/ipadic-compress"]
-unidic-compress = ["lindera/unidic-compress"]
-ko-dic-compress = ["lindera/ko-dic-compress"]
-cc-cedict-compress = ["lindera/cc-cedict-compress"]
+ipadic = ["lindera/ipadic"]  # Include Japanese dictionary (IPADIC)
+unidic = ["lindera/unidic"]  # Include Japanese dictionary (UniDic)
+ko-dic = ["lindera/ko-dic"]  # Include Korean dictionary (ko-dic)
+cc-cedict = ["lindera/cc-cedict"]  # Include Chinese dictionary (CC-CEDICT)
+ipadic-compress = ["lindera/ipadic-compress"]  # Compress Japanese dictionary (IPADIC)
+unidic-compress = ["lindera/unidic-compress"]  # Compress Japanese dictionary (UniDic)
+ko-dic-compress = ["lindera/ko-dic-compress"]  # Compress Korean dictionary (ko-dic)
+cc-cedict-compress = ["lindera/cc-cedict-compress"]  # Compress Chinese dictionary (CC-CEDICT)
 
 [dependencies]
 anyhow = "1.0.68"
 clap = { version = "4.1.1", features = ["derive", "cargo"] }
 serde_json = "1.0.91"
 
-lindera = { version = "0.21.1", path = "../lindera" }
+lindera = { version = "0.22.0", path = "../lindera" }
 
 [[bin]]
 name = "lindera"
