--- a/lindera-filter/Cargo.toml
+++ b/lindera-filter/Cargo.toml
@@ -2,6 +2,14 @@
 name = "lindera-filter"
 version = "0.22.0"
 edition = "2021"
+description = "Character and token filters for Lindera."
+documentation = "https://docs.rs/lindera-filter"
+homepage = "https://github.com/lindera-morphology/lindera"
+repository = "https://github.com/lindera-morphology/lindera"
+readme = "README.md"
+keywords = ["japanese", "morphological", "dictionary", "filter", "character", "token"]
+categories = ["text-processing"]
+license = "MIT"
 
 [features]
 default = []  # No directories included
