--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-dictionary"
-version = "0.22.0"
+version = "0.22.1"
 edition = "2021"
 description = "A Japanese morphological dictionary."
 documentation = "https://docs.rs/lindera-dictionary"
@@ -13,10 +13,10 @@ license = "MIT"
 
 [features]
 default = []  # No directories included
-ipadic = ["lindera-ipadic"]  # Include Japanese dictionary (IPADIC)
-unidic = ["lindera-unidic"]  # Include Japanese dictionary (UniDic)
-ko-dic = ["lindera-ko-dic"]  # Include Korean dictionary (ko-dic)
-cc-cedict = ["lindera-cc-cedict"]  # Include Chinese dictionary (CC-CEDICT)
+ipadic = ["lindera-ipadic/ipadic"]  # Include Japanese dictionary (IPADIC)
+unidic = ["lindera-unidic/unidic"]  # Include Japanese dictionary (UniDic)
+ko-dic = ["lindera-ko-dic/ko-dic"]  # Include Korean dictionary (ko-dic)
+cc-cedict = ["lindera-cc-cedict/cc-cedict"]  # Include Chinese dictionary (CC-CEDICT)
 ipadic-compress = ["lindera-ipadic/compress"]  # Compress Japanese dictionary (IPADIC)
 unidic-compress = ["lindera-unidic/compress"]  # Compress Japanese dictionary (UniDic)
 ko-dic-compress = ["lindera-ko-dic/compress"]  # Compress Korean dictionary (ko-dic)
@@ -28,8 +28,8 @@ bincode = "1.3.3"
 byteorder = "1.4.3"
 serde = { version="1.0.152", features = ["derive"] }
 
-lindera-core = { version = "0.22.0", path = "../lindera-core" }
-lindera-cc-cedict = { version = "0.22.0", path = "../lindera-cc-cedict", optional = true }
-lindera-ipadic = { version = "0.22.0", path = "../lindera-ipadic", optional = true }
-lindera-ko-dic = { version = "0.22.0", path = "../lindera-ko-dic", optional = true }
-lindera-unidic = { version = "0.22.0", path = "../lindera-unidic", optional = true }
+lindera-core = { version = "0.22.1", path = "../lindera-core" }
+lindera-cc-cedict = { version = "0.22.1", path = "../lindera-cc-cedict", optional = true }
+lindera-ipadic = { version = "0.22.1", path = "../lindera-ipadic", optional = true }
+lindera-ko-dic = { version = "0.22.1", path = "../lindera-ko-dic", optional = true }
+lindera-unidic = { version = "0.22.1", path = "../lindera-unidic", optional = true }
