--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "lindera-cc-cedict"
-version = "0.22.1"
+version = "0.23.0"
 edition = "2021"
 description = "A Japanese morphological dictionary for CC-CEDICT."
 documentation = "https://docs.rs/lindera-cc-cedict"
 homepage = "https://github.com/lindera-morphology/lindera"
 repository = "https://github.com/lindera-morphology/lindera"
 readme = "README.md"
-keywords = ["chinese", "morphological", "dictionary", "loader", "cc-cedict"]
+keywords = ["chinese", "morphological", "dictionary", "cc-cedict"]
 categories = ["text-processing"]
 license = "MIT"
 
@@ -20,12 +20,12 @@ bincode = "1.3.3"
 byteorder = "1.4.3"
 once_cell = "1.17.0"
 
-lindera-core = { version = "0.22.1", path = "../lindera-core" }
-lindera-decompress = { version = "0.22.1", path = "../lindera-decompress", optional = true }
+lindera-core = { version = "0.23.0", path = "../lindera-core" }
+lindera-decompress = { version = "0.23.0", path = "../lindera-decompress", optional = true }
 
 [build-dependencies]
 encoding = { version = "0.2.33", optional = true }
 zip = { version = "0.6.3", optional = true }
 
-lindera-core = { version = "0.22.1", path = "../lindera-core" }
-lindera-cc-cedict-builder = { version = "0.22.1", path = "../lindera-cc-cedict-builder"}
+lindera-core = { version = "0.23.0", path = "../lindera-core" }
+lindera-cc-cedict-builder = { version = "0.23.0", path = "../lindera-cc-cedict-builder"}
