--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "lindera-dictionary"
-version = "0.22.1"
+version = "0.23.0"
 edition = "2021"
 description = "A Japanese morphological dictionary."
 documentation = "https://docs.rs/lindera-dictionary"
 homepage = "https://github.com/lindera-morphology/lindera"
 repository = "https://github.com/lindera-morphology/lindera"
 readme = "README.md"
-keywords = ["morphological", "dictionary", "directory", "loader"]
+keywords = ["morphological", "analysis", "library"]
 categories = ["text-processing"]
 license = "MIT"
 
@@ -28,8 +28,8 @@ bincode = "1.3.3"
 byteorder = "1.4.3"
 serde = { version="1.0.152", features = ["derive"] }
 
-lindera-core = { version = "0.22.1", path = "../lindera-core" }
-lindera-cc-cedict = { version = "0.22.1", path = "../lindera-cc-cedict", optional = true }
-lindera-ipadic = { version = "0.22.1", path = "../lindera-ipadic", optional = true }
-lindera-ko-dic = { version = "0.22.1", path = "../lindera-ko-dic", optional = true }
-lindera-unidic = { version = "0.22.1", path = "../lindera-unidic", optional = true }
+lindera-core = { version = "0.23.0", path = "../lindera-core" }
+lindera-cc-cedict = { version = "0.23.0", path = "../lindera-cc-cedict", optional = true }
+lindera-ipadic = { version = "0.23.0", path = "../lindera-ipadic", optional = true }
+lindera-ko-dic = { version = "0.23.0", path = "../lindera-ko-dic", optional = true }
+lindera-unidic = { version = "0.23.0", path = "../lindera-unidic", optional = true }
