--- a/lindera-ko-dic/Cargo.toml
+++ b/lindera-ko-dic/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "lindera-ko-dic"
-version = "0.22.1"
+version = "0.23.0"
 edition = "2021"
 description = "A Japanese morphological dictionary for ko-dic."
 documentation = "https://docs.rs/lindera-ko-dic"
 homepage = "https://github.com/lindera-morphology/lindera"
 repository = "https://github.com/lindera-morphology/lindera"
 readme = "README.md"
-keywords = ["korean", "morphological", "dictionary", "loader", "ko-dic"]
+keywords = ["korean", "morphological", "dictionary", "ko-dic"]
 categories = ["text-processing"]
 license = "MIT"
 
@@ -20,13 +20,13 @@ bincode = "1.3.3"
 byteorder = "1.4.3"
 once_cell = "1.17.0"
 
-lindera-core = { version = "0.22.1", path = "../lindera-core" }
-lindera-decompress = { version = "0.22.1", path = "../lindera-decompress", optional = true }
+lindera-core = { version = "0.23.0", path = "../lindera-core" }
+lindera-decompress = { version = "0.23.0", path = "../lindera-decompress", optional = true }
 
 [build-dependencies]
 encoding = { version = "0.2.33", optional = true }
 flate2 = { version = "1.0.25", optional = true }
 tar = { version = "0.4.38", optional = true }
 
-lindera-core = { version = "0.22.1", path = "../lindera-core" }
-lindera-ko-dic-builder = { version = "0.22.1", path = "../lindera-ko-dic-builder"}
+lindera-core = { version = "0.23.0", path = "../lindera-core" }
+lindera-ko-dic-builder = { version = "0.23.0", path = "../lindera-ko-dic-builder"}
