--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -13,18 +13,18 @@ license = "MIT"
 
 [features]
 default = []  # No directories included
-ipadic = ["lindera-dictionary/ipadic"]  # Include IPADIC dictionary (Japanese)
-unidic = ["lindera-dictionary/unidic"]  # Include UniDic dictionary (Japanese)
-ko-dic = ["lindera-dictionary/ko-dic"]  # Include ko-dic dictionary (Korean)
-cc-cedict = ["lindera-dictionary/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
+ipadic = ["lindera-tokenizer/ipadic"]  # Include IPADIC dictionary (Japanese)
+unidic = ["lindera-tokenizer/unidic"]  # Include UniDic dictionary (Japanese)
+ko-dic = ["lindera-tokenizer/ko-dic"]  # Include ko-dic dictionary (Korean)
+cc-cedict = ["lindera-tokenizer/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
+ipadic-compress = ["lindera-tokenizer/ipadic-compress"]  # Compress IPADIC
+unidic-compress = ["lindera-tokenizer/unidic-compress"]  # Compress UniDic
+ko-dic-compress = ["lindera-tokenizer/ko-dic-compress"]  # Compress ko-dic
+cc-cedict-compress = ["lindera-tokenizer/cc-cedict-compress"]  # Compress CC-CEDICT
 ipadic-filter = ["lindera-filter/ipadic"]  # Include filters for IPADIC
 unidic-filter = ["lindera-filter/unidic"]  # Include filters for UniDic
 ko-dic-filter = ["lindera-filter/ko-dic"]  # Include filters for ko-dic
 cc-cedict-filter = ["lindera-filter/cc-cedict"]  # Include filters for CC-CEDICT
-ipadic-compress = ["lindera-dictionary/ipadic-compress"]  # Compress IPADIC
-unidic-compress = ["lindera-dictionary/unidic-compress"]  # Compress UniDic
-ko-dic-compress = ["lindera-dictionary/ko-dic-compress"]  # Compress ko-dic
-cc-cedict-compress = ["lindera-dictionary/cc-cedict-compress"]  # Compress CC-CEDICT
 
 [dependencies]
 anyhow = "1.0.68"
@@ -43,10 +43,11 @@ yada = "0.5.0"
 lindera-cc-cedict-builder = { version = "0.23.0", path = "../lindera-cc-cedict-builder" }
 lindera-core = { version = "0.23.0", path = "../lindera-core" }
 lindera-dictionary = { version = "0.23.0", path = "../lindera-dictionary" }
+lindera-filter = { version = "0.23.1", path = "../lindera-filter" }
 lindera-ipadic-builder = { version = "0.23.0", path = "../lindera-ipadic-builder" }
 lindera-ko-dic-builder = { version = "0.23.0", path = "../lindera-ko-dic-builder" }
+lindera-tokenizer = { version = "0.24.0", path = "../lindera-tokenizer" }
 lindera-unidic-builder = { version = "0.23.0", path = "../lindera-unidic-builder" }
-lindera-filter = { version = "0.23.1", path = "../lindera-filter" }
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
